RESOLVED FIXED140487
tables/mozilla/bugs/bug10633.html is flakey on Yosemite
https://bugs.webkit.org/show_bug.cgi?id=140487
Summary tables/mozilla/bugs/bug10633.html is flakey on Yosemite
Myles C. Maxfield
Reported 2015-01-14 19:33:27 PST
Shipping Yosemite. Release, WK1, run after editing/selection/move-by-character-brute-force.html.
Attachments
Patch (4.32 KB, patch)
2015-01-15 18:40 PST, Myles C. Maxfield
no flags
Myles C. Maxfield
Comment 1 2015-01-14 19:35:25 PST
Occurs even after applying the workaround in https://bugs.webkit.org/show_bug.cgi?id=140253
Myles C. Maxfield
Comment 2 2015-01-14 19:36:19 PST
"Shipping Yosemite" = 14B25
Myles C. Maxfield
Comment 3 2015-01-14 19:50:08 PST
Same thing for tables/mozilla/bugs/bug113235-1.html
Myles C. Maxfield
Comment 4 2015-01-14 19:52:49 PST
Same thing for tables/mozilla/bugs/bug8858.html
Myles C. Maxfield
Comment 5 2015-01-14 19:57:27 PST
Same thing for fast/encoding/utf-16-big-endian.html
Myles C. Maxfield
Comment 6 2015-01-14 20:03:40 PST
Same thing for fast/encoding/utf-16-little-endian.html
Myles C. Maxfield
Comment 7 2015-01-14 20:40:25 PST
Similar for svg/custom/svg-fonts-without-missing-glyph.xhtml, but the test you need to run before it is fonts/font-fallback-prefers-pictographs.html
Myles C. Maxfield
Comment 8 2015-01-14 20:42:35 PST
fonts/sans-serif.html is back to editing/selection/move-by-character-brute-force.html
Myles C. Maxfield
Comment 9 2015-01-14 20:49:26 PST
The rest of the tests in this section, until the last two (media/controls-after-reload.html and media/controls-without-preload.html) don't seem relevant. Those two media tests are marked as always failing on Yosemite.
Myles C. Maxfield
Comment 10 2015-01-14 21:01:59 PST
This smells like a single underlying issue.
Myles C. Maxfield
Comment 11 2015-01-15 18:40:39 PST
WebKit Commit Bot
Comment 12 2015-01-15 21:55:05 PST
Comment on attachment 244742 [details] Patch Clearing flags on attachment: 244742 Committed r178573: <http://trac.webkit.org/changeset/178573>
WebKit Commit Bot
Comment 13 2015-01-15 21:55:09 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.