tables/mozilla/bugs/bug10633.html is flakey on Yosemite https://bugs.webkit.org/show_bug.cgi?id=140487

Reviewed by Simon Fraser.

Source/WebCore:

The workaround in https://bugs.webkit.org/show_bug.cgi?id=140253 works
on both OSes.

* platform/graphics/mac/SimpleFontDataMac.mm:
(WebCore::SimpleFontData::platformInit):

LayoutTests:

Mark tests as not flakey any more.

* platform/mac/TestExpectations:


Canonical link: https://commits.webkit.org/158510@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@178573 268f45cc-cd09-0410-ab3c-d52691b4dbfc